[GStreamer] Audio is distorted in Kaltura videos https://bugs.webkit.org/show_bug.cgi?id=297116

Reviewed by Xabier Rodriguez-Calvar.

Re-allow decodebin(3) to autoplug avdec_aac decoders after making sure the MSE AAC parser emits
frames with ADTS headers. Raw AAC doesn't seem very well supported in avdec_aac, leading to garbled
audio rendering.

The fdkaacdec decoder handles raw AAC better, but depends on FDK-AAC which might not be shipped by
every distro, or requires explicit installation from non-free repositories.

Canonical link: https://commits.webkit.org/299318@main